[package]
name = "culverin"
version = "0.1.0"
edition = "2024"
description = "A HTTP load testing tool inspired"
authors = ["Culverin Contributors"]
license = "MIT"
repository = "https://github.com/muhadif/culverin"
documentation = "https://github.com/muhadif/culverin"
readme = "README.md"
keywords = ["load-testing", "http", "benchmark", "performance", "testing"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[lib]
name = "culverin"
path = "src/lib.rs"

[[bin]]
name = "culverin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "gzip", "brotli", "deflate", "cookies"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
opentelemetry = { version = "0.20", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.13", features = ["metrics", "logs", "http-proto"] }
opentelemetry_sdk = { version = "0.20", features = ["metrics", "logs", "rt-tokio"] }
opentelemetry-appender-tracing = "0.1"
opentelemetry-stdout = { version = "0.1", features = ["logs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
plotters = "0.3"
humantime = "2.1"
num_cpus = "1.16"
bytes = "1.5"
url = { version = "2.5", features = ["serde"] }
rand = "0.8"
crossterm = "0.27"
tui = { package = "ratatui", version = "0.24", default-features = false, features = ["crossterm"] }
csv = "1.3"
histogram = "0.7"
